--- a/src/components/Industries.css
+++ b/src/components/Industries.css
@@ -1,5 +1,5 @@
 .scroller {
-  padding: 5rem 0;
+  padding-top: var(--size-1000);
 }
 
 .industry-title {
@@ -42,7 +42,7 @@
 .scroller[data-animated='true'] .scroller__inner {
   width: max-content;
   flex-wrap: nowrap;
-  animation: scroll var(--_animation-duration, 3s) var(--_animation-direction, forwards) linear infinite;
+  animation: scroll var(--_animation-duration, 20s) var(--_animation-direction, forwards) linear infinite;
 }
 
 .scroller[data-direction='right'] {
@@ -63,6 +63,6 @@
 
 @keyframes scroll {
   to {
-    transform: translate(calc(-50% - 2rem));
+    transform: translate(calc(-50% - 4rem));
   }
 }
