--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -114,6 +114,7 @@ input:where([type='text'], [type='email'], ) {
   width: 2rem;
   aspect-ratio: 1;
   fill: var(--clr-neutral-100);
+  transition: fill 0.3s ease;
 }
 
 .social-list a:is(:hover, :focus) .social-icon {
