--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -63,23 +63,12 @@
   width: 100%;
 }
 
-.button {
-  display: inline-flex;
-  cursor: pointer;
-  text-decoration: none;
-  border: 0;
-  border-radius: 100vmax;
-  padding: 1.25em 2.5em;
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-button);
-  line-height: 1;
-  color: var(--clr-neutral-100);
-  background-color: var(--clr-orange-400);
-  box-shadow: 0 1.125em 1em -1em var(--clr-orange-500);
-}
-
 .mobile-links {
   display: none;
+}
+
+.header-button {
+  display: inline-flex;
 }
 
 @media (max-width: 60rem) {
@@ -124,6 +113,7 @@
   .mobile-links {
     transition: opacity 1s ease;
   }
+
   .header-button {
     display: none;
   }
