--- a/src/components/style.css
+++ b/src/components/style.css
@@ -84,3 +84,22 @@ svg {
   width: min(var(--max-width), 100% - (var(--container-padding) * 2));
   margin-inline: auto;
 }
+
+.button {
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1.25em 2.5em;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  line-height: 1;
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-orange-400);
+  box-shadow: 0 1.125em 1em -1em var(--clr-orange-500);
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: var(--clr-orange-500);
+}
